[package]
name = "minecraft_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
bytes = "1.4"
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
byteorder = "1.4"
flate2 = "1.0"
rand = "0.8"